--- a/login/styles0.css
+++ b/login/styles0.css
@@ -21,13 +21,17 @@ body{
 }
 /* ================================================ */
 main{
-    width: 100%;
+    width: 21rem;
     height: 100%;
+    margin: auto;
 /*     background: rgb(65,59,73);
     background: linear-gradient(0deg, rgba(65,59,73,1) 0%, rgba(0,0,0,1) 100%); */
+   /*  resize: both; */
+  overflow: auto;
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(12, 1fr);
+    grid-template-columns: repeat(6, 3.5rem);
+    grid-template-rows: repeat(12, 4.25rem);
+    /* scroll-behavior: inherit; */
 }
 /* ================================================ */
 .header{
@@ -49,11 +53,12 @@ main{
     display: flex;
     justify-content: start;
     align-items: center;
+    width: 100%;
 
 }
 .header div{
-    width: 15%;
-    height: 40%;
+    width: 3rem;
+    height: 3.4rem;
 
     display: flex;
     justify-content: center;
@@ -68,7 +73,7 @@ main{
     width: 100%;
     height: 100%;
     display: flex;
-        justify-content: center;
+    justify-content: center;
     align-items: center;
 }
 .header p{
@@ -83,27 +88,28 @@ main{
     flex-direction: column;
     justify-content: start;
     align-items: center;
-
+    width: 100%;
+     /* margin-bottom: 1rem; */
 }
 .signup__box-text{
 /*     width: 100%;
     height: 30%; */
     color: #878787;
-    margin-left: 2rem;
+    /* margin-left: 2rem; */
     align-self: start;
 }
 .signup__box-options{
     width: 100%;
-    height: 70%;
+    height: 94px;
 
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
 }
 .signup__box-option{
-    width: 40%;
-    height: 70%;
+    width: 9.3rem;
+    height: 4rem;
     background: #171717;
     border-radius: 10px;
     display: flex;
@@ -119,14 +125,19 @@ main{
 
 /* ================================================ */
     .form__box{
-        color: #fff;
+        color:  #fff;
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        align-items: center;
+        width: 100%;
     }
  .form__box form{
      display: flex;
      flex-direction: column;
      justify-self: center;
      align-items: center;
-     
+      width: 100%;
     margin-top: .6rem;
  }
 .form__box form input {
@@ -138,7 +149,7 @@ main{
     border: 3px solid #202020;
   padding-left: 20px;
   font-weight: 300;
-  width: 90%;
+    width: 100%;
   cursor: pointer;
   color: #fff;
   margin-bottom: .8rem;
